[package]
name = "moqx_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.3", features = ["nif_version_2_16"] }
moq-native = { version = "0.13", default-features = false, features = ["quinn", "aws-lc-rs"] }
moq-lite = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
url = "2"
anyhow = "1"
bytes = "1"
