[package]
name = "moqx_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["quinn", "websocket", "aws-lc-rs"]
quinn = ["moq-native/quinn"]
quiche = ["moq-native/quiche"]
noq = ["moq-native/noq"]
websocket = ["moq-native/websocket"]
aws-lc-rs = ["moq-native/aws-lc-rs"]

[dependencies]
rustler = { version = "0.37.3", features = ["nif_version_2_16"] }
moq-native = { version = "0.13", default-features = false }
moq-lite = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net"] }
url = "2"
anyhow = "1"
bytes = "1"
quinn = "0.11"
web-transport-quinn = "0.11"
web-transport-trait = "0.3"
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
