[package]
name = "moqx_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.3", features = ["nif_version_2_16"] }
moqtail = { git = "https://github.com/moqtail/moqtail" }
wtransport = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net"] }
url = "2"
anyhow = "1"
bytes = "1"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
